Fixed layout Issues and transitions

--- a/src/styles/banner.scss
+++ b/src/styles/banner.scss
@@ -1,14 +1,19 @@
 // I would clean this but I'm scared
 .home {
-  height: 100%;
+  // height: 100%;
+  overflow: hidden;
   //BANNER
   .banner-container {
+    position: relative;
+    display: block;
     width: 100%;
-    height: 75%;
+    height: 75vh;
+    margin: auto 0;
     .banner {
       width: 100%;
+      height: 100%;
       display: block;
-      position: absolute;
+      position: relative;
       top: 0;
 
       top: 25%;
@@ -70,11 +75,6 @@
 
     //ARROW
     .arrow-down {
-      position: absolute;
-      bottom: 30%;
-      left: 0;
-      right: 0;
-
       a:visited,
       a:hover,
       a:focus {
@@ -82,7 +82,9 @@
         color: #212121;
       }
       width: 100%;
+      position: absolute;
 
+      bottom: 10%;
       svg {
         margin-left: auto;
         margin-right: auto;
