--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -26,7 +26,7 @@
 }
 .project-container {
   width: 100%;
-  display: flex;
+  //   height: 100%; //   display: flex;
   @include media("<=tablet") {
     margin: auto auto;
   }
@@ -39,7 +39,10 @@
     align-items: center;
     justify-content: center;
     width: 100%;
+    height: 100%;
     margin: 0 auto;
+
+    flex-direction: column;
     @include media("<=445px") {
       flex-direction: column;
     }
@@ -53,7 +56,6 @@
 .card {
   overflow: hidden;
   box-shadow: 0 0 10px -2px rgba(0, 0, 0, 0.2);
-  border-radius: 1rem;
   box-sizing: border-box;
   cursor: pointer;
 }
@@ -87,7 +89,9 @@
 }
 
 .expanded {
+  border-radius: 10px;
   .title-bg {
+    box-shadow: 0 0 10px -2px rgba(0, 0, 0, 0.2);
     top: 0;
     height: 20%;
     margin: auto;
@@ -96,16 +100,16 @@
     position: relative;
     justify-content: space-between;
 
-    background-color: inherit;
-    background: linear-gradient(
-      73deg,
-      rgba(73, 108, 70, 1) 0%,
-      rgba(86, 0, 0, 1) 50%,
-      rgba(86, 0, 0, 1) 100%
-    );
+    // background-color: inherit;
+    // background: linear-gradient(
+    //   73deg,
+    //   rgba(73, 108, 70, 1) 0%,
+    //   rgba(86, 0, 0, 1) 50%,
+    //   rgba(86, 0, 0, 1) 100%
+    // );
     img {
       position: relative;
-      right: 1px;
+      //   right: 1px;
       width: 40%;
       object-fit: cover;
       object-position: 50% 50%;
@@ -145,6 +149,7 @@
       }
     }
     h1 {
+      text-shadow: 0px 2px 3px #212121;
       margin: auto;
       font-size: 3vw;
       color: white;
@@ -157,8 +162,8 @@
 
 .compact {
   position: relative;
-  background-color: #ffffff;
-  width: 20rem;
+  background-color: #373737;
+  width: 90vh;
   height: 15rem;
   //   padding: 0.5rem;
   margin: 20px 0;
@@ -167,6 +172,9 @@
     width: 70vw;
     height: 70vw;
   }
+  .title-bg {
+    height: 100%;
+  }
   img {
     object-fit: cover;
     width: 100%;
@@ -174,10 +182,17 @@
   }
   .title {
     position: absolute;
-    top: 10px;
+    text-shadow: 0px 2px 3px #212121;
     color: black;
-    margin-left: 10px;
-    font-size: 2.5em;
+    margin: auto;
+
+    width: 100%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+
+    font-size: 3.5vw;
     @include media("<=445px") {
       font-size: 12vw;
     }
